src/AIS/AIS_EqualDistanceRelation.cxx
@@ -639,8 +639,8 @@ void AIS_EqualDistanceRelation::ComputeTwoVerticesLength( const Handle( Prs3d_Pr
      curpos.Translate(offset);
      Position = curpos;
    }
-   else {  
-     const gp_Dir& aDir = Plane->Pln().Axis().Direction();
+   else {
+     gp_Dir aDir = Plane->Pln().Axis().Direction();
      gp_Vec aVec (aDir.XYZ()*10*ArrowSize);
      //Position = gp_Pnt(FirstAttach.XYZ()+gp_XYZ(1.,1.,1.)); // not correct
      Position = FirstAttach.Translated(aVec);
